Updated image paths

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
       <div class="container px-4">
          <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
             <div class="col-12 col-sm-10 col-lg-6">
-               <img src="https://github.com/alandoherty95/hurtonfitness3.0/blob/main/assets/images/logo-full-color-icon.jpg?raw=true" class="d-block mx-lg-auto img-fluid" alt="">
+               <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/logo-full-color-icon.jpg?raw=true" class="d-block mx-lg-auto img-fluid" alt="Hurton Fitness Logo">
             </div>
             <div class="col-lg-6">
                <h1 class="outline display-5 fw-bold lh-1 mb-3"><i class="bi bi-person-lines-fill"></i> Contact Iain</h1>
