--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="container px-2">
          <div class="row flex-lg-row-reverse align-items-center g-5 py-2">
             <div class="col-12 col-sm-10 col-lg-6">
-               <img src="https://github.com/alandoherty95/hurtonfitness3.0/blob/main/assets/images/logo-full-color-icon.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="">
+               <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/logo-full-color-icon.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="Hurton Fitness Logo">
             </div>
             <div class="col-lg-6">
                <h1 class="outline">Iain Hurton</h1>
@@ -137,7 +137,7 @@
                </div>
             </div>
             <div class="col-12 col-sm-10 col-lg-6">
-               <img src="https://github.com/alandoherty95/hurtonfitness3.0/blob/main/assets/images/bootcamp4.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="" loading="lazy">
+               <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/bootcamp4.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="Fitness Bootcamp 4" loading="lazy">
             </div>
          </div>
       </div>
@@ -146,7 +146,7 @@
       <div class="container px-2">
          <div class="row flex-lg-row-reverse align-items-center g-5 py-2">
             <div class="col-12 col-sm-10 col-lg-6">
-               <img src="https://github.com/alandoherty95/hurtonfitness3.0/blob/main/assets/images/bootcamp1.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="" loading="lazy">
+               <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/bootcamp1.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="Fitness Bootcamp 1" loading="lazy">
             </div>
             <div class="col-lg-6">
                <h3 class="outline">Personal Training</h3>
@@ -173,7 +173,7 @@
                </div>
             </div>
             <div class="col-12 col-sm-10 col-lg-6">
-               <img src="https://github.com/alandoherty95/hurtonfitness3.0/blob/main/assets/images/dumbbells1.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="" loading="lazy">
+               <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/dumbbells1.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="Dumbbells" loading="lazy">
             </div>
          </div>
       </div>
