--- a/personal-training.html
+++ b/personal-training.html
@@ -28,7 +28,7 @@
             <span class="fs-4">Hurton Fitness</span>
             </a>
             <ul class="nav nav-pills">
-               <li class="nav-item"><a href="personal-training.html" class="nav-link">Personal Training</a></li>
+               <li class="nav-item"><a href="personal-training.html" class="nav-link active">Personal Training</a></li>
                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
@@ -62,7 +62,6 @@
                <li class="nav-item"><a href="about.html" class="nav-link px-2 text-muted">About</a></li>
                <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
                <li class="nav-item"><a href="gallery.html" class="nav-link px-2 text-muted">Gallery</a></li>
-               <li class="nav-item"><a href="about.html#faq" class="nav-link px-2 text-muted">FAQs</a></li>
             </ul>
          </footer>
       </div>
