--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             </a>
             <ul class="nav nav-pills">
                <li class="nav-item"><a href="personal-training.html" class="nav-link">Personal Training</a></li>
-               <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+               <li class="nav-item"><a href="about.html" class="nav-link active">About</a></li>
                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
             </ul>
@@ -45,7 +45,7 @@
             </div>
             <div class="col-lg-6">
                <h1 class="outline display-5 fw-bold lh-1 mb-3"><i class="bi bi-person"></i> About Iain</h1>
-               <p class="lead pt-5">Iain is an <strong>experienced trainer</strong> who runs fitness bootcamps.</p>
+               <p class="lead pt-5">Iain is an <strong>experienced personal trainer</strong> who runs fitness bootcamps.</p>
                <p class="lead py-2">Contact Iain now for a <strong>free consultation</strong> and to discuss the most suitable training program for you. <strong>Reserve your place now!</strong></p>
                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                   <a href="https://www.instagram.com/hurtonsfitness/?hl=en" target="_blank" class="btn btn-lg btn btn-outline-dark" title="Message Iain on Instagram"><i class="bi bi-instagram"></i> Message Iain</a>
@@ -56,7 +56,7 @@
       </div>
 
       <!-- Bootstrap Accordian FAQs -->
-      <div class="container pt-4 border-top" id="faq">
+      <div class="container pt-4 border-top">
          <h3 class="outline">Frequently Asked Questions</h3>
          <p class="lead">Explore the most common questions about Iain, his personal training methods and what to expect before you start your training program.</p>
          <div class="accordion" id="accordionExample">
@@ -128,10 +128,9 @@
          <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-muted">&copy; Hurton Fitness 2023</p>
             <ul class="nav col-md-4 justify-content-end">
-               <li class="nav-item"><a href="about.html" class="nav-link px-2 text-muted">About</a></li>
+               <li class="nav-item"><a href="personal-training.html" class="nav-link px-2 text-muted">Personal Training</a></li>
                <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
                <li class="nav-item"><a href="gallery.html" class="nav-link px-2 text-muted">Gallery</a></li>
-               <li class="nav-item"><a href="about.html#faq" class="nav-link px-2 text-muted">FAQs</a></li>
             </ul>
          </footer>
       </div>
