--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
                <li class="nav-item"><a href="personal-training.html" class="nav-link">Personal Training</a></li>
                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-               <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
+               <li class="nav-item"><a href="gallery.html" class="nav-link active">Gallery</a></li>
             </ul>
          </header>
       </div>
@@ -59,10 +59,9 @@
          <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-muted">&copy; Hurton Fitness 2023</p>
             <ul class="nav col-md-4 justify-content-end">
+               <li class="nav-item"><a href="about.html" class="nav-link px-2 text-muted">Personal Training</a></li>
                <li class="nav-item"><a href="about.html" class="nav-link px-2 text-muted">About</a></li>
                <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
-               <li class="nav-item"><a href="gallery.html" class="nav-link px-2 text-muted">Gallery</a></li>
-               <li class="nav-item"><a href="about.html#faq" class="nav-link px-2 text-muted">FAQs</a></li>
             </ul>
          </footer>
       </div>
