--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="col-lg-6">
                <h1 class="outline">Iain Hurton</h1>
-               <p class="lead pt-5">Iain is an <strong>experienced trainer</strong> who runs fitness bootcamps.</p>
+               <p class="lead pt-5">Iain is an <strong>experienced personal trainer</strong> who runs fitness bootcamps.</p>
                <p class="lead py-2">Contact Iain now for a <strong>free consultation</strong> and to discuss the most suitable training program for you. <strong>Reserve your place now!</strong></p>
                <p class="lead py-2"><i class="bi bi-star"></i> Personal Trainer</p>
                <p class="lead py-2"><i class="bi bi-star"></i> Fitness Instructor</p>
@@ -239,10 +239,10 @@
          <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-muted">&copy; Hurton Fitness 2023</p>
             <ul class="nav col-md-4 justify-content-end">
+               <li class="nav-item"><a href="personal-training.html" class="nav-link px-2 text-muted">Personal Training</a></li>
                <li class="nav-item"><a href="about.html" class="nav-link px-2 text-muted">About</a></li>
                <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
                <li class="nav-item"><a href="gallery.html" class="nav-link px-2 text-muted">Gallery</a></li>
-               <li class="nav-item"><a href="about.html#faq" class="nav-link px-2 text-muted">FAQs</a></li>
             </ul>
          </footer>
       </div>
