--- a/about.html
+++ b/about.html
@@ -37,23 +37,116 @@
          </header>
       </div>
 
-      <!-- Bootstrap Hero Top Section -->
-      <div class="container px-4">
-         <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
-            <div class="col-12 col-sm-10 col-lg-6">
-               <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/logo-full-color-icon.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="Hurton Fitness Logo">
+
+      <section class="container mt-4">
+         <h3 class="outline"><i class="bi bi-chat-right-quote"></i> Client Testimonials</h3>
+         <p class="lead">Read reviews from people who have worked closely with Iain.</p>
+         <div class="row">
+            <div class="col-lg-6 p-3">
+               <div class="card">
+                  <div class="card-header">
+                     Personal Training
+                  </div>
+                  <div class="card-body">
+                     <blockquote class="blockquote">
+                        <p>"Iain is a professional well-prepared trainer with natural charisma, a positive outlook and a growth mindset. The product he delivers to me has responded to any challenge and consistently improved in quality over time. Iain's classes are an excellent fit for me as they are varied and fun. Iain is very professional and is always there early with class equipment set up ready to greet participants as they arrive. He also has good session plans made but is comfortable to adapt if an extra person turns up or if somebody joins in late."</p>
+                        <footer class="blockquote-footer mt-1">Brendan, aged 44</footer>
+                     </blockquote>
+                  </div>
+               </div>
             </div>
-            <div class="col-lg-6">
-               <h1 class="outline display-5 fw-bold lh-1 mb-3"><i class="bi bi-person"></i> About Iain</h1>
-               <p class="lead pt-5">Iain is an <strong>experienced personal trainer</strong> who runs fitness bootcamps.</p>
-               <p class="lead py-2">Contact Iain now for a <strong>free consultation</strong> and to discuss the most suitable training program for you. <strong>Reserve your place now!</strong></p>
-               <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <a href="https://www.instagram.com/hurtonsfitness/?hl=en" target="_blank" class="btn btn-lg btn btn-outline-dark" title="Message Iain on Instagram"><i class="bi bi-instagram"></i> Message Iain</a>
-                  <a href="about.html" class="btn btn-lg btn btn-dark" title="Go to About"><i class="bi bi-info-circle"></i> About Iain</a>
+            <div class="col-lg-6 p-3">
+               <div class="card">
+                  <div class="card-header">
+                     Swimming
+                  </div>
+                  <div class="card-body">
+                     <blockquote class="blockquote">
+                        <p>"Iain was a very professional, courteous and patient swimming instructor. He had a very kind and gentle approach to teaching, he acknowledged my fear in the water and personalised techniques that helped me relax in the water and become confident in my abilities. Thanks to Iain I am now confident in the water and absolutely love swimming. My confidence and ability has definitely grown. I highly recommend Iain as a fitness/swim instructor for somebody wanting to reach their individual goals."</p>
+                        <footer class="blockquote-footer mt-1">Anne, aged 54</footer>
+                     </blockquote>
+                  </div>
                </div>
             </div>
          </div>
+         <div class="row">
+            <div class="col-lg-6 p-3">
+               <div class="card">
+                  <div class="card-header">
+                     Aqua Aerobics
+                  </div>
+                  <div class="card-body">
+                     <blockquote class="blockquote">
+                        <p>"I did aqua aerobics twice a week with Iain at Castletroy Park Hotel, all the women loved when Iain was doing the class. His class was great fun, motivational and effective. His wonderful playlists got us moving, old ladies forgot their aches and pains as they exercised to his great music. He cheered everyone up, always had a smile, and his energy and dance moves were a joy to watch."</p>
+                        <footer class="blockquote-footer mt-1">Mary, aged 72</footer>
+                     </blockquote>
+                  </div>
+               </div>
+            </div>
+            <div class="col-lg-6 p-3">
+               <div class="card">
+                  <div class="card-header">
+                     Personal Training
+                  </div>
+                  <div class="card-body">
+                     <blockquote class="blockquote">
+                        <p>"I couldn't recommend Iain enough. I did some personal training and fitness classes with him. Iain is extremely motivational and always pushed people to get their best results. He organises fantastic classes and always plays great music which makes it even more enjoyable. Best personal trainer by far and I can't wait to get back to his classes."</p>
+                        <footer class="blockquote-footer mt-1">Breda, aged 24</footer>
+                     </blockquote>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- Certificates & Qualifications Card -->
+      <div class="container mt-4">
+         <h3 class="outline"><i class="bi bi-patch-check-fill"></i> Certificates & Qualifications</h3>
+         <p class="lead">Iain has completed courses in exercise and personal training</p>
+         <div class="row">
+            <div class="col-lg-6 p-3">
+               <div class="card">
+                  <div class="card-body">
+                     <ul>
+                        <li>Advanced Sports Recreation and Exercise (LCFE)</li>
+                        <li>Sport, Recreation and Exercise (CCL)</li>
+                        <li>Business Management (QQI Level 5)</li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+            <div class="col-lg-6 p-3">
+               <div class="card">
+
+                  <div class="card-body">
+                     <ul>
+                        <li>PFS Kettlebells</li>
+                        <li>PFS Aqua Fitness Instructor</li>
+                        <li>PFS Indoor Cycling Instructor</li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>  
       </div>
+
+            <!-- Bootstrap About Iain Card -->
+            <div class="container pt-4">
+               <div class="row flex-lg-row-reverse align-items-center g-5 py-2">
+                  <div class="col-lg-6">
+                     <h3 class="outline">About Iain</h3>
+                     <p class="lead py-2">I love all kinds of exercise including swimming, lifting weights, running and hiking. Fitness is my passion in life. I found my love of fitness at 16 years old and I haven't looked back since. Through my love of fitness, I hope to inspire as many people as possible to live a healthy lifestyle.</p>
+                     <p class="lead py-2">My favourite way to exercise would be a push/pull training plan. Pull exercises focuses on back and arm while other exercises cover legs and core. That being said, I really enjoy circuit training because it is challenging and makes me want to better my last attempt.</p>
+                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                        <a href="about.html" class="btn btn-lg btn-outline-dark" title="Go to About"><i class="bi bi-info-circle"></i> About Iain</a>
+                        <a href="tel:" target="_blank" class="btn btn-lg btn-dark" title="Call Iain"><i class="bi bi-telephone-forward"></i> Call Iain</a>
+                     </div>
+                  </div>
+                  <div class="col-12 col-sm-10 col-lg-6">
+                     <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/dumbbells1.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="Dumbbells" loading="lazy">
+                  </div>
+               </div>
+            </div>
 
       <!-- Bootstrap Accordian FAQs -->
       <div class="container pt-4 border-top">
