--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <!-- Bootstrap Client Testimonials Card -->
       <section class="container mt-4">
-         <h3 class="outline">Client Testimonials</h3>
+         <h3 class="outline"><i class="bi bi-chat-right-quote"></i> Client Testimonials</h3>
          <p class="lead">Read reviews from people who have worked closely with Iain.</p>
          <div class="row">
             <div class="col-lg-6 p-3">
@@ -146,7 +146,7 @@
       <div class="container px-2">
          <div class="row flex-lg-row-reverse align-items-center g-5 py-2">
             <div class="col-12 col-sm-10 col-lg-6">
-               <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/bootcamp1.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="Fitness Bootcamp 1" loading="lazy">
+               <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/bootcamp1.jpeg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="Fitness Bootcamp 1" loading="lazy">
             </div>
             <div class="col-lg-6">
                <h3 class="outline">Personal Training</h3>
@@ -227,7 +227,9 @@
             <div class="col-lg-6">
                <div class="card shadow">
                   <div class="card-body">
-                     <h3 class="card-title">Every next level of your life will demand a different version of you!</h3>
+                     <blockquote class="blockquote">
+                        <p class="card-title">"Every next level of your life will demand a different version of you!"</p>
+                     </blockquote>
                   </div>
                </div>
             </div>
