--- a/personal-training.html
+++ b/personal-training.html
@@ -43,7 +43,7 @@
                <img src="https://github.com/alandoherty95/HurtonFitness3/blob/main/assets/images/logo-full-color-icon.jpg?raw=true" class="rounded d-block mx-lg-auto img-fluid" alt="Hurton Fitness Logo">
             </div>
             <div class="col-lg-6">
-               <h1 class="outline display-5 fw-bold lh-1 mb-3"><i class="bi bi-person-circle"></i> Personal Training</h1>
+               <h1 class="outline display-5 fw-bold lh-1 mb-3"><i class="bi bi-people"></i> Personal Training</h1>
                <p class="lead pt-5">Iain is an <strong>experienced trainer</strong> who runs fitness bootcamps.</p>
                <p class="lead py-2">Contact Iain now for a <strong>free consultation</strong> and to discuss the most suitable training program for you. <strong>Reserve your place now!</strong></p>
                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
